tests/foreign_directives_context_bad.stderr
tests/foreign_directives_context_bad.sl:4:1: error: SL0000: context is not supported on foreign-linkage functions
